deps: updates build to compile with LTS JDK and bumps deps except brave (#204)
This moves to the same build infra as the rest of Zipkin, notably to
allow compiling on JDK 11, 17 and 21. This also bumps all the
dependencies, except brave which is about to be released.

This also migrates to junit5 which began with the helpful @TeamModerne tool, but needed a lot of fixing up due to lack of a grpc jupiter extension.
```
./mvnw org.openrewrite.maven:rewrite-maven-plugin:run \
  -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-testing-frameworks:LATEST \
  -Drewrite.activeRecipes=org.openrewrite.java.testing.junit5.JUnit4to5Migration
```

Signed-off-by: Adrian Cole <adrian@tetrate.io>